--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -31,4 +31,9 @@ features = [
   "ProgressEvent",
   "WebSocket",
   "File",
+  'Document',
+  'Element',
+  'HtmlElement',
+  'Node',
+  'Window',
 ]
